[package]
name = "blte_test"
version = "0.1.0"
authors = ["TheSylex"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.11"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.0"
chrono = "0.4"
num-bigint = "0.4"